app/assets/stylesheets/dmptool/utils/_media.scss
/* MEDIA SPECIFIC CHANGES */

/* Tablets and Phones */
/* ----------------------------------------------------------------------- */
@media all and (max-width: $hide-org-logo-breakpoint) {
  body > .dmptool .org-logo {
    display: none;
  }
}

@media all and (max-width: 768px) {
  body > .dmptool .welcome > div .welcome-message div > div.get-started {
    float: none;
  }
}

/* Phones */
/* ----------------------------------------------------------------------- */
@media all and (max-width: $mobile-layout-breakpoint) {
  body {
    .dmptool {
      /* Hide the normal menus and display the mobile ones */
      header > .fixed-menu, header > .branding, header > .app-menu , footer > .footer {
        display: none;
      }
      header > .fixed-menu-mobile, footer > .footer-mobile {
        display: block;
      }

      .navbar-fixed-top {
        .container-fluid {
          margin-right: 0;
          margin-left: 0;
        }

        .navbar-toggle, .navbar-toggle:visited, .navbar-toggle:hover, .navbar-toggle:focus, .navbar-toggle:active {
          margin: 2px 5px 0 0;
          background-color: $color-primary-background;

          .icon-bar {
            background-color: $color-seccondary-background;
          }
        }
        .navbar-toggle:not(.collapsed) .icon-bar:nth-child(2) {
          transform: rotate(45deg) translate(5px, 4px);
          transition: ease all .2s;
        }
        .navbar-toggle:not(.collapsed) .icon-bar:nth-child(3) {
          opacity: 0;
          transition: ease all .2s;
        }
        .navbar-toggle:not(.collapsed) .icon-bar:nth-child(4) {
          transform: rotate(-45deg) translate(4px, -4px);
          transition: ease all .2s;
        }

        ul[aria-labelledby="language-menu-button"] > li,
        ul[aria-labelledby="org-menu-button"] > li,
        ul[aria-labelledby="profile-menu-button"] > li,
        ul[aria-labelledby="signin-menu-button"] > li {
          margin-left: 15px;
          position: relative;

          .fa-envelope {
            display: none;
          }
          .fa-envelope ~ a:after {
            content: '\f0e0';
            font-family: FontAwesome;
            font-size: 1.3rem;
            color: $color-seccondary-text;
            margin:0px 0px 0px 10px;
            text-decoration:none;
          }
        }

        .org-logo, .org-logo:hover, .org-logo:focus, .org-logo:active, .org-logo:visited {
          font-size: 1.6rem;
          padding-left: 0;
        }
        .app-logo {
          height: 50px;
          min-width: auto;
          max-width: auto;
          padding-right: 15px;
        }

        .learn-menu {
          display: block;

          .menu-col {
            margin-left: 45px;

            div > div {
              margin-left: 15px;
            }
          }
          .menu-col > div {
            margin-bottom: 5px;
          }
        }

        a.dropdown, .dropdown-menu > li > a {
          background-color: $color-seccondary-background;
          color: $color-seccondary-text;
        }
        .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
          text-decoration: underline;
        }
      }

      .notifications {
        padding-top: 25px;
      }

      /* Homepage */
      .welcome {
        background: none;
        padding: 0 5px;

        min-height: auto;

        > div {
          background: none;
          margin-top: 0;
        }

        .welcome-message {
          color: $color-seccondary-text;

          h1 {
            color: $color-seccondary-text;
          }

          .get-started {
            float: none;

            .btn-inverse {
              background-color: $color-primary-background;
              color: $color-primary-text;
              margin-top: 10px;
            }
          }
        }
      }

      /* Create Plan hacks */
      #new_plan {
        h2 {
          font-size: 1.8rem;
        }
        /* Force the checkboxes below the inputs */
        .col-md-1, .col-xs-5, .col-xs-6 {
          width: 100%;

          input[type="text"] {
            margin-bottom: 5px;
          }
        }
        .col-xs-5 > .create-plan-mock, .create-plan-checkbox {
          margin-left: 0;
        }
        .create-plan-mock {
          margin-top: -30px;
        }
      }

      .communications > div {
        margin-top: 5px;
        flex: 1 100%;
      }

      footer {
        width: 100%;
        border-radius: 0;

        .footer-mobile {
          display: flex;
          flex-flow: row wrap;
          justify-content: space-between;
        }

        ul {
          padding-left: 5px;

          li {
            list-style: none;

            .fa-twitter-square, .fa-rss-square {
              font-size: 2rem;
            }
          }
        }

        img {
          margin-top: 10px;
          max-width: 100px;
        }
        p, p > a {
          font-size: 1.2rem;
        }
      }
    }
  }
}

